--- a/staticfiles/index.html
+++ b/staticfiles/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/static/favicon.ico">
+    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SmartPlan</title>
     <!-- Bulma CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <script type="module" crossorigin src="/static/index.js"></script>
-    <link rel="stylesheet" href="/static/index.css">
+    <script type="module" crossorigin src="/static/assets/index.js"></script>
+    <link rel="stylesheet" href="/static/assets/index.css">
   </head>
   <body>
     <div id="app"></div>
